name:           morse
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Cameron Samak
maintainer:     Cameron Samak
license:        MIT
copyright:      Cameron Samak

executable morse
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   containers
  ghc-options:     -Wall
  other-modules:   Data.DualMap

